2009-04-25  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #25929. Thanks to Bob Paddock for a patch.
	* include/avr/boot.h (__BOOT_LOCK_BITS_SET): Provide alternate
	definition if RFLB is defined instead of BLBSET.
	NEWS: Add item to fixed bug list.

2009-04-25  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #26284. Thanks to Brad Schick for the patch.
	* include/avr/boot.h (boot_lock_fuse_bits_get): Remove explicit load
	of Z, use 'z' constraint instead. Remove unneeded clobbers.
	NEW: Add item to fixed bug list.

2009-04-25  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #26188.
	* include/avr/io.h: Include separate header file for ATmega644P.
	* include/avr/Makefile.am (avr_HEADERS): Add new file.
	* include/avr/iom644p.h: New file, forked from iom644.h.
	(SIGNATURE_2): Fix signature byte definition.
	* include/avr/iom164.h: Add signature bytes for ATmega164P.
	* include/avr/iom324.h: Add signature bytes for ATmega324P.
	* NEWS: Add item to fixed bug list.

2009-04-25  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #26308.
	* include/avr/io90pwm2b.h: Replace WDE3 with WDE.
	* include/avr/io90pwm3b.h: Same.
	* NEWS: Add item to fixed bug list.

2009-04-25  Eric B. Weddington  <eric.weddington@atmel.com>

	* devtools/gen-avr-lib-tree.sh: Use generic variable for turning
	off jump tables optimization. Turn off this optimization for more
	devices and architectures.

2009-04-20  Eric B. Weddington  <eric.weddington@atmel.com>

	* configure.ac: Add support for ATxmega64D3.
	* devtools/gen-avr-lib-tree.sh: Same.
	* include/avr/Makefile.am: Same.
	* include/avr/io.h: Same.
	* doc/api/main_page.dox: Same.
	* doc/api/using-tools.dox: Same.
	* include/avr/power.h: Same.
	* include/avr/sleep.h: Same.
	* include/avr/wdt.h: Same.
	* include/avr/iox64d3.h: New file.
	* NEWS: Add news item.

2009-04-19  Eric B. Weddington  <eric.weddington@atmel.com>

	* devtools/gen-avr-lib-tree.sh: Use -fno-jump-tables to compile